<resources>
    <string name="app_name">Buscar Empleo</string>
    <string name="load_img">Loading</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="profile_name">Mi Perfil</string>

    <!-- Strings related to login -->
    <string name="userTxt">User</string>
    <string name="passwordTxt">Password</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fecha_nac">Fecha Nacimiento</string>

</resources>
